# -homework10

./: .travis.yml  CMakeLists.txt  main.cpp  out.h
